2009-05-04  Ozan Çağlayan <ozan@pardus.org.tr>
	* etc/mudur.conf: Set head_start to xdm
	* bin/mudur.py (startNetwork): Switch to new network backend.

2009-04-27  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py(localMount): Remove probing of usbcore as it's
	now in-kernel.

2009-04-20  Ozan Çağlayan <ozan@pardus.org.tr>
	* etc/mudur.conf: Comment the head_start for now,
	* setup.py: Prepare for the 3.0.0 release.

2009-04-09  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py (setupUdev): This modification caused /dev/ppp
	to disappear upon reboot (#9497).

2009-03-20  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py (copyUdevRules): Upstream says that we don't have to
	retrigger for persistent rules,
	* bin/mudur.py (CPU): Completely remove the CPU class as cpufreq
	probing will be done by kernel,
	* bin/mudur.py (checkFileSystems): Delete /forcefsck only if it
	exists. Fixes an unhandled exception during boot if mudur=forcefsck
	is given,
	* bin/mudur.py (readyService): Remove this method and use startService
	with a second parameter equal to 'ready' instead of this,
	* bin/mudur.py (startService): Add a second parameter command= for
	being able to call "service --ready" for some services.
	* bin/mudur.py (Config.__init__): Enable debug by default as we don't
	flood the mudur.log with millions of lines when it's enabled.

2009-03-16  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py: Disable CPUFreq probing as they will be
	built into kernel.

2009-03-04  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py: Add occasional debug calls for
	better logging into /var/log/mudur.log

2009-03-03  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py: The I/O redirection of start-stop-daemon
	doesn't work at all. Implemented a new method run_async()
	which runs a command in background and optionally redirects
	its output and error streams.
	* bin/mudur.py (startUdev): Use run_async() for spawning
	udevadm monitor instead of buggy start-stop-daemon.